--- a/DPV/Assignment3/main.ipynb
+++ b/DPV/Assignment3/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd # needed for most operation\n",
     "import numpy as np # needed for some array operations\n",
-    "from sqlalchemy import create_engine # needed for DB connection\n",
+    "from sqlalchemy import create_engine, types # needed for DB connection\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Join the data from the three CSV files to create a single DataFrame\n",
     "merged_df = main_df.merge(managers_df, on='Region')\n",
-    "merged_df = merged_df.merge(returns_df, on='Order ID')"
+    "merged_df = merged_df.merge(returns_df, on='Order ID')\n",
+    "\n",
+    "# Replace commas with periods\n",
+    "merged_df['Sales'] = merged_df['Sales'].str.replace(',', '.').astype(float)\n",
+    "merged_df['Unit Price'] = merged_df['Unit Price'].str.replace(',', '.').astype(float)\n",
+    "merged_df['Profit'] = merged_df['Profit'].str.replace(',', '.').astype(float)\n",
+    "merged_df['Shipping Cost'] = merged_df['Shipping Cost'].str.replace(',', '.').astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,23 +90,19 @@
     "sales_df = sales_df.merge(customers_df, on=['Customer Name', 'Province', 'Region', 'Customer Segment'])\n",
     "sales_df = sales_df.merge(return_status_df, left_on='Status', right_on='returnvalue')\n",
     "sales_df = sales_df.rename(columns={\n",
-    "    'productid': 'product_id',\n",
-    "    'customerid': 'customer_id',\n",
-    "    'orderdate': 'order_date',\n",
-    "    'returnstatusid': 'return_status_id',\n",
-    "    'lateid': 'late_id',\n",
-    "    'sales': 'sales_amount',\n",
-    "    'orderquantity': 'order_quantity',\n",
-    "    'unitprice': 'unit_price',\n",
-    "    'profit': 'profit_amount',\n",
-    "    'shippingcost': 'shipping_cost'\n",
-    "}).drop(['Product Name', 'Product Category', 'Product Sub-Category', 'Customer Name', 'Province', 'Region', 'Customer Segment', 'Status', 'Late'], axis=1)\n",
-    "\n"
+    "    'Order Date': 'orderdate',\n",
+    "    'Order Quantity': 'orderquantity',\n",
+    "    'Sales': 'sales',\n",
+    "    'Unit Price': 'unitprice',\n",
+    "    'Profit': 'profit',\n",
+    "    'Shipping Cost': 'shippingcost',\n",
+    "    'Late': 'late'\n",
+    "}).drop(['Product Name', 'Product Category', 'Product Sub-Category', 'Customer Name', 'Province', 'Region', 'Customer Segment', 'Status'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +124,7 @@
        "2"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,9 +140,19 @@
     "\n",
     "# Creating the connection pool for SQLalchemy\n",
     "engine = create_engine(f'{driver}://{username}:{password}@{server}:{port}/{dbname}')\n",
-    "\n",
-    "# Upload the data\n",
-    "sales_df.to_sql('sales', engine,schema='ass3', index=False, if_exists='replace')\n",
+    "column_data_types = {\n",
+    "    'product_id': types.INTEGER,\n",
+    "    'customer_id': types.INTEGER,\n",
+    "    'orderdate': types.DATE,\n",
+    "    'returnstatusid': types.INTEGER,\n",
+    "    'late': types.TEXT,\n",
+    "    'sales': types.DOUBLE_PRECISION,\n",
+    "    'orderquantity': types.DOUBLE_PRECISION,\n",
+    "    'unitprice': types.DOUBLE_PRECISION,\n",
+    "    'profit': types.DOUBLE_PRECISION,\n",
+    "    'shippingcost': types.DOUBLE_PRECISION,\n",
+    "}\n",
+    "sales_df.to_sql('sales', engine,schema='ass3', index=False, if_exists='replace', dtype=column_data_types)\n",
     "product_df.to_sql('product', engine,schema='ass3', index=False, if_exists='replace')\n",
     "customers_df.to_sql('customers', engine,schema='ass3', index=False, if_exists='replace')\n",
     "return_status_df.to_sql('return_status', engine,schema='ass3', index=False, if_exists='replace')"
@@ -149,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +179,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "30d3c0e4fa8d05f9c6a3186eb6f0cc211ca67d9e4bba2b8ee2d4e67f3b7d7009"
+    "hash": "730964344af82839bf3b2b0cae60c9793bdad5f387aad9d89ff1b3397cba7d67"
    }
   }
  },
