Add figures and update DPV script

--- a/DPV/Assignment2/main.ipynb
+++ b/DPV/Assignment2/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd # needed for most operation\n",
     "import numpy as np # needed for some array operations\n",
-    "from sqlalchemy import create_engine # needed for DB connection\n",
+    "from sqlalchemy import create_engine, text # needed for DB connection\n",
     "\n",
     "inputfile = 'BI_Raw_Data.csv'\n",
     "\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "155"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,11 +102,80 @@
     "customer.to_sql('customer', engine,schema='ass2',index=False, if_exists='replace')\n",
     "sales.to_sql('sales', engine,schema='ass2',index=False, if_exists='replace')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('product',), ('customer',), ('sales',)]\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77 entries, 0 to 76\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   productid  77 non-null     int64 \n",
+      " 1   name       77 non-null     object\n",
+      " 2   category   77 non-null     object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 1.9+ KB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 89 entries, 0 to 88\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   customerid  89 non-null     int64 \n",
+      " 1   name        89 non-null     object\n",
+      " 2   country     89 non-null     object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 2.2+ KB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2155 entries, 0 to 2154\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   year        2155 non-null   int64  \n",
+      " 1   month       2155 non-null   int64  \n",
+      " 2   day         2155 non-null   object \n",
+      " 3   customerid  2155 non-null   int64  \n",
+      " 4   productid   2155 non-null   int64  \n",
+      " 5   sales       2155 non-null   float64\n",
+      "dtypes: float64(1), int64(4), object(1)\n",
+      "memory usage: 101.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine, text # needed for DB connection\n",
+    "import pandas as pd # needed for most operation\n",
+    "import numpy as np # needed for some array operations\n",
+    "\n",
+    "driver='postgresql'\n",
+    "username='dab_ds22232a_46'\n",
+    "dbname=username # it is the same as the username\n",
+    "password='5wQ5aeeIp3Xaobd6'\n",
+    "server='bronto.ewi.utwente.nl'\n",
+    "port='5432'\n",
+    "engine = create_engine(f'{driver}://{username}:{password}@{server}:{port}/{dbname}')\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    result = connection.execute(text(\"\"\"SELECT table_name FROM information_schema.tables\n",
+    "                                    where table_schema='ass2'\"\"\")).fetchall() ## to get the tables from schema ass2\n",
+    "    print(result)\n",
+    "\n",
+    "    pd.read_sql_table('product', connection, schema='ass2').info()\n",
+    "    pd.read_sql_table('customer', connection, schema='ass2').info()\n",
+    "    pd.read_sql_table('sales', connection, schema='ass2').info()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -120,11 +189,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "30d3c0e4fa8d05f9c6a3186eb6f0cc211ca67d9e4bba2b8ee2d4e67f3b7d7009"
+    "hash": "ead1b95f633dc9c51826328e1846203f51a198c6fb5f2884a80417ba131d4e82"
    }
   }
  },
