--- a/DPV/Assignment2/main.ipynb
+++ b/DPV/Assignment2/main.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -189,11 +189,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ead1b95f633dc9c51826328e1846203f51a198c6fb5f2884a80417ba131d4e82"
+    "hash": "5b3dc5a15a2f019f38574d8e8c35223ba2a55bc1e91b1f466f8db45323037b26"
    }
   }
  },
